# key-of-solomon

./: .gitignore  Dockerfile  docker-compose.yaml  pydantify.ipynb  pydantify_imp.ipynb  pyproject.toml
models/: card.py
schema_imp/: base.json  card.json  cards.json  cycle.json  cycles.json  encounter.json  encounters.json  faction.json  factions.json  pack.json  packs.json  taboo.json  taboos.json  type.json  types.json
