[project]
name = "key_of_solomon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator[graphql,http,debug]>=0.28.5",
    "jupyter-collaboration>=3.1.0",
    "jupyter-lsp>=2.2.5",
    "notebook>=7.3.3",
    "tomli>=2.2.1",
    "pydantic>=2.11.2",
]

[tool.datamodel-codegen]
use_double_quotes = true
reuse_model = true
capitalise_enum_members = true
use_annotated = true
use_standard_collections = true
use_union_operator = true
use_unique_items_as_set = true
use_subclass_enum = true
formatters = ["ruff-check", "ruff-format"]
field_constraints = true
field_include_all_keys = true
strip_default_none = false
snake_case_field = true
use_field_description = true
allow_population_by_field_name = true
use_schema_description = true
use_title_as_name = true
collapse_root_models = true
keep_model_order = false